[gd_scene load_steps=7 format=3 uid="uid://bjn8urkj1uugf"]

[ext_resource type="Script" path="res://scripts/entities/abilities/projectile/Projectile_Microrocket.gd" id="1_3ekqn"]
[ext_resource type="Shape3D" uid="uid://pxsyld37kqnv" path="res://scenes/vehicles/Vehicle Parts/abilities/micro_rockets/M_MicroRocketCapsule.tres" id="2_lwhy8"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_48tac"]
seed = 453454
frequency = 0.7752
metadata/_preview_in_3d_space_ = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xqj8c"]
noise = SubResource("FastNoiseLite_48tac")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d2u0k"]
albedo_color = Color(0.0705882, 0.109804, 0.341176, 1)
metallic = 0.93
metallic_texture = SubResource("NoiseTexture2D_xqj8c")
metallic_texture_channel = 4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ws8k4"]
material = SubResource("StandardMaterial3D_d2u0k")
radius = 0.05
height = 0.5

[node name="MicroRocket" type="Node3D"]
script = ExtResource("1_3ekqn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_ws8k4")

[node name="TurnDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="Hitbox" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = ExtResource("2_lwhy8")

[connection signal="timeout" from="TurnDelay" to="." method="_on_turn_delay_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_body_entered"]
